tests/suite/analyze/snapshots/suite__analyze__live_variables__propagate_liveness_memory-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 136
expression: live_ranges
---
rsp      enter:
|          mov _x, 1
|   _x     mov _x, [_x]
|   ●      mov rax, _x
|   rax  exit:
●   ●      ret

