tests/suite/analyze/snapshots/suite__analyze__live_variables__propagate_liveness_memory.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 157
expression: live_variables
---

 propagate_liveness_memory

      +--------------+
      |    enter:    |
      | {rsp}        |
      | mov _x, 1    |
      | {rsp, _x}    |
      | mov _x, [_x] |
      | {rsp, _x}    |
      | mov rax, _x  |
      | {rax, rsp}   |
      | jmp exit     |
      | {rax, rsp}   |
      +--------------+
        |
        |
        v
      +--------------+
      |    exit:     |
      | {rax, rsp}   |
      | ret          |
      | {}           |
      +--------------+

