tests/suite/analyze/snapshots/suite__analyze__live_variables__propagate_liveness_memory_tree.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 153
expression: live_variables
---

propagate_liveness_memory_tree

+-----------------------------+
|           enter:            |
| {rsp}                       |
| mov _a, 0                   |
| {rsp, _a}                   |
| mov _b, 1                   |
| {rsp, _a, _b}               |
| mov _c, 2                   |
| {rsp, _c, _b, _a}           |
| mov _d, 3                   |
| {rsp, _c, _b, _d, _a}       |
| mov _a, [_a + 8]            |
| {rsp, _c, _a, _d, _b}       |
| mov _b, [_b + _c]           |
| {rsp, _b, _a, _d, _c}       |
| mov _c, [_c * 8 + 8]        |
| {rsp, _b, _a, _c, _d}       |
| mov _d, [_d]                |
| {rsp, _b, _a, _c, _d}       |
| mov _l, [_c + _d + 8]       |
| {rsp, _l, _a, _b}           |
| mov _r, [_a + _b * 8]       |
| {rsp, _l, _r}               |
| mov rax, [_l + _r * 8 + 16] |
| {rax, rsp}                  |
| jmp exit                    |
| {rax, rsp}                  |
+-----------------------------+
  |
  |
  v
+-----------------------------+
|            exit:            |
| {rax, rsp}                  |
| ret                         |
| {}                          |
+-----------------------------+

