tests/suite/analyze/snapshots/suite__analyze__live_variables__propagate_liveness_memory_two-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 144
expression: live_ranges
---
rsp          enter:
|              mov _x, 1
|   _x         mov _y, 2
|   |   _y     mov _x, [_x + _y * 8]
|   ●          mov rax, _x
|   rax      exit:
●   ●          ret

