tests/suite/analyze/snapshots/suite__analyze__live_variables__propagate_liveness_memory_two.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 165
expression: live_variables
---

 propagate_liveness_memory_two

   +-----------------------+
   |        enter:         |
   | {rsp}                 |
   | mov _x, 1             |
   | {rsp, _x}             |
   | mov _y, 2             |
   | {rsp, _x, _y}         |
   | mov _x, [_x + _y * 8] |
   | {rsp, _x}             |
   | mov rax, _x           |
   | {rax, rsp}            |
   | jmp exit              |
   | {rax, rsp}            |
   +-----------------------+
     |
     |
     v
   +-----------------------+
   |         exit:         |
   | {rax, rsp}            |
   | ret                   |
   | {}                    |
   +-----------------------+

