tests/suite/analyze/snapshots/suite__analyze__live_variables__propagate_liveness_move-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 116
expression: live_ranges
---
rsp      enter:
|          mov _x, 0
|   _x     mov _y, _x
|   _y     mov _z, _y
|   _z     mov rdx, _z
|   rdx    mov rax, rdx
|   rax  exit:
●   ●      ret

