tests/suite/analyze/snapshots/suite__analyze__live_variables__propagate_liveness_neg-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 147
expression: live_ranges
---
rsp      enter:
|          mov _x, 1
|   _x     neg _x
|   |      neg _x
|   |      neg _x
|   ●      mov rax, _x
|   rax    jmp exit
|   |    exit:
●   ●      ret

