tests/suite/analyze/snapshots/suite__analyze__live_variables__redundant_moves-2.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 106
expression: live_ranges
---
rsp                enter:
|                    mov _useless, 0
|                    mov _useless, 1
|                    mov _useless, 2
|                    mov _useless, 3
|        _useless    mov rax, _useless
|        rax       exit:
●        ●           ret

