tests/suite/analyze/snapshots/suite__analyze__live_variables__redundant_moves.snap
---
source: tests/suite/analyze/live_variables.rs
assertion_line: 127
expression: live_variables
---

  redundant_moves

+-------------------+
|      enter:       |
| {rsp}             |
| mov _useless, 0   |
| {rsp}             |
| mov _useless, 1   |
| {rsp}             |
| mov _useless, 2   |
| {rsp}             |
| mov _useless, 3   |
| {rsp, _useless}   |
| mov rax, _useless |
| {rax, rsp}        |
| jmp exit          |
| {rax, rsp}        |
+-------------------+
  |
  |
  v
+-------------------+
|       exit:       |
| {rax, rsp}        |
| ret               |
| {}                |
+-------------------+

